# fbm-gen

./: CMakeLists.txt  README.md
data/configs/: arctic.json  hills.json  mountain_lake.json  silhoutte.json  snow_mountains.json  swamp.json  wild_west.json
data/resources/kernel/: fbm.h  raymarch.h  terrain.cl  warp.cl
data/resources/shader/: terrain.glsl
data/resources/shaders/gl/: textured_quad.vert
src/: README.md  main.cpp
src/Core/: Application.cpp  Application.h  Timer.cpp  Timer.h  fbmgen_gl.h  types.h  utils.cpp  utils.h
src/Graphics/: Camera.cpp  Camera.h  ImageExtension.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Gui/: Gui.cpp  Gui.h  Log.cpp  Log.h
src/Input/: Input.cpp  Input.h
src/Renderer/: Renderer.cpp  Renderer.h
src/Window/: Window.cpp  Window.h
